# Quindar

./: .dockerignore  Cargo.toml  README.md
.cargo/: config.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: ci.yml  release.yml
src/: main.rs
