[package]
name = "quindar_api"
version = "1.2.0"
edition = "2024"

[features]
default = ["audio"]
audio = ["rodio"]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
rodio = { version = "0.19", optional = true }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["stream", "json"] }
dotenv = "0.15"
bytes = "1.0"
msedge-tts = "0.2"
notify-rust = "4"
